--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,52 +1,63 @@
-trigger:
-  branches:
-    include:
-      - master
+# Xamarin.iOS
 
-pool:
-  vmImage: 'macos-latest'
+trigger:
+- main
 
 variables:
-  buildConfiguration: 'Release'
+- group: 'variables'
 
-steps:
-  # Step 1: Checkout Code
-  - checkout: self
+jobs:
+  - job: 'BuildiOS'
+    pool:
+      vmImage: 'macOS-latest'
+    
+    variables:
+      buildConfiguration: 'Release'
+    
+    steps:
+      - task: NuGetToolInstaller@1
 
-  # Step 2: Install Dependencies
-  - script: |
-      brew update
-      brew install mono
-      brew install --cask xamarin-android
-      brew install --cask xamarin-ios
-    displayName: 'Install Dependencies'
+      - task: NuGetCommand@2
+        inputs:
+          restoreSolution: '**/*.sln'
+      
+      - task: DownloadSecureFile@1
+        inputs:
+          secureFile: '$(ProvisioningProfile-FileName)'
+      
+      - task: DownloadSecureFile@1
+        inputs:
+          secureFile: '$(AppleCertificate-FileName)'
+      
+      - task: InstallAppleCertificate@2
+        inputs:
+          certSecureFile: '$(AppleCertificate-FileName)'
+          certPwd: '$(AppleCertificate-Password)'
+      
+      - task: InstallAppleProvisioningProfile@1
+        inputs:
+          provisioningProfileLocation: secureFiles
+          provProfileSecureFile: '$(ProvisioningProfile-FileName)'
+          removeProfile: true
 
-  # Step 3: Restore NuGet Packages with MSBuild
-  - task: MSBuild@1
-    displayName: 'Restore NuGet Packages'
-    inputs:
-      solution: '**/*.sln'
-      msbuildArguments: '/restore'
-
-  # Step 4: Build Android Project
-  - task: MSBuild@1
-    displayName: 'Build Xamarin.Android'
-    inputs:
-      solution: '**/*Droid*.csproj'
-      configuration: $(buildConfiguration)
-      msbuildArguments: '/t:SignAndroidPackage'
-
-  # Step 5: Build iOS Project
-  - task: MSBuild@1
-    displayName: 'Build Xamarin.iOS'
-    inputs:
-      solution: '**/*.iOS.csproj'
-      configuration: $(buildConfiguration)
-      msbuildArguments: '/t:Build'
-
-  # Step 6: Publish Build Artifacts
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish Build Artifacts'
-    inputs:
-      pathtoPublish: '**/bin/Release'
-      artifactName: 'drop'
+      - task: XamariniOS@2
+        inputs:
+          solutionFile: '**/*.sln'
+          configuration: '$(buildConfiguration)'
+          buildForSimulator: false
+          packageApp: true
+          signingIdentity: $(APPLE_CERTIFICATE_SIGNING_IDENTITY)
+          signingProvisioningProfileID: $(APPLE_PROV_PROFILE_UUID)
+      
+      - task: CopyFiles@2
+        inputs:
+          Contents: '**/*.ipa'
+          TargetFolder: '$(Build.ArtifactStagingDirectory)'
+          OverWrite: true
+          flattenFolders: true
+      
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'MyAwesomeApp-$(Build.BuildNumber)'
+          publishLocation: Container
